the final stuff (hopefully didnt break anything)

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -3131,17 +3131,17 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_break_corperations:0 "Break up Corporations"
   SDF_break_corperations_desc:0 "The subservience that foreign corporations demand of our workers prevents them from being loyal to the nation. With only state-owned business shall our workers know the true meaning of liberty."
   SDF_unite_mic:0 "Unite the Military Industrial Complex"
-  SDF_unite_mic_desc:0 ""
+  SDF_unite_mic_desc:0 "The nation’s security is too precious to be outsourced to private interests. The complete merger of German industry into a single conglomerate shall protect our secrets. "
   SDF_work_freedom:0 "Work for Freedom"
   SDF_work_freedom_desc:0 "The overhaul of the nation’s system of political representation implies that its judicial system must be likewise changed. Prisoners, political opponents, and war criminals will be extended the offer of a lifetime: to work in exchange for their freedom. "
   SDF_land_distribution:0 "Land Distribution"
   SDF_land_distribution_desc:0 "There exists large swaths of productive land across our nation. Its acquisition and subsequent development can increase our industrial capacity."
   SDF_autarky:0 "Autarky"
-  SDF_autarky_desc:0 ""
+  SDF_autarky_desc:0 "To be self-sufficient is to be strong. While we have been dependent on the benevolence of others, it is time for the nation to create its own prosperity."
   SDF_closing_trade:0 "Closing off all Communication"
   SDF_closing_trade_desc:0 ""
   SDF_battle_grain:0 "Battle for Grain"
-  SDF_battle_grain_desc:0 ""
+  SDF_battle_grain_desc:0 "“One cannot think well, love well, sleep well, if one has not dined well” - Virginia Woolf \n \n The path to stability requires satisfying our people’s hunger. Grain must be produced, at all costs. "
   SDF_new_mines:0 "Resource Allocation"
   SDF_new_mines_desc:0 ""
   SDF_kuro_century:0 "Kuromorimine "§YGolden§!" Age"
