Were in the end game now

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -3125,7 +3125,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
 
   ##ECONOMIC
   SDF_status_economic:0 "Status of the Economy"
-  SDF_status_economic_desc:0 ""
+  SDF_status_economic_desc:0 "Description: The economy is in shambles. The path to return it will be hard and arduous. A report to determine our next steps is in order. "
   SDF_industrial_democracy:0 "Industrial Democracy"
   SDF_industrial_democracy_desc:0 "The thing that bonds us is not life, entertainment, nor friendship. It is work - the physical form of our efforts. Those that produce the most for our nation shall therefore be given the most representation in our political decisions."
   SDF_break_corperations:0 "Break up Corporations"
@@ -3139,7 +3139,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_autarky:0 "Autarky"
   SDF_autarky_desc:0 "To be self-sufficient is to be strong. While we have been dependent on the benevolence of others, it is time for the nation to create its own prosperity."
   SDF_closing_trade:0 "Closing off all Communication"
-  SDF_closing_trade_desc:0 ""
+  SDF_closing_trade_desc:0 "Closed trade likewise requires closed communications. Self-sufficiency shall require the full dependence on our own knowledge, and the elimination of foreign rabble. "
   SDF_battle_grain:0 "Battle for Grain"
   SDF_battle_grain_desc:0 "“One cannot think well, love well, sleep well, if one has not dined well” - Virginia Woolf \n \n The path to stability requires satisfying our people’s hunger. Grain must be produced, at all costs. "
   SDF_new_mines:0 "Resource Allocation"
@@ -3149,7 +3149,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_free_market:0 "The Free Market"
   SDF_free_market_desc:0 ""
   SDF_civil_works:0 "Civil Work Programs"
-  SDF_civil_works_desc:0 ""
+  SDF_civil_works_desc:0 "Our people are in need. With analysis by an economist named Keynes, we may have to try a new approach to getting out of this economic crisis. Perhaps programs like those implemented in Roosevelt’s New Deal may help our economy grow."
   SDF_autobauhn:0 "Expand the Autobahn"
   SDF_autobauhn_desc:0 "A growing economy requires the infrastructure to support it. The cleanest solution is to expand our greatest and most modern triumph: the autobahn."
   SDF_fix_buracracy:0 "Reorganize the Bureaucracy"
@@ -3158,6 +3158,14 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_zero_tarrifs_desc:0 "Jack of all trades, master of none. A closed nation will suffer a fate that cannot be undone.  \n \nA self-sustaining free market must interact with stronger economies. Opening the nation to the cultures and goods abroad will strengthen our own production."
   SDF_into_future:0 "Into the Future"
   SDF_into_future_desc:0 ""
+  
+  ##EASTER EGG##
+  SDF_anzai_one:0 "A Old Friend"
+  SDF_anzai_one_desc:0 ""
+  SDF_anzai_two:0 "Dinner"
+  SDF_anzai_two_desc:0 ""
+  SDF_anzai_three:0 ""
+  SDF_anzai_three_desc:0 ""
   
   ##SDF TECH LOC##
   
