--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -3187,6 +3187,14 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_anzai_two_desc:0 ""
   SDF_anzai_three:0 ""
   SDF_anzai_three_desc:0 ""
+  SDF_anzai_four:0 ""
+  SDF_anzai_four_desc:0 ""
+  SDF_anzai_three2:0 ""
+  SDF_anzai_three2_desc:0 ""
+  SDF_anzai_four2:0 ""
+  SDF_anzai_four2_desc:0 ""
+  SDF_anzai_five:0 ""
+  SDF_anzai_five_desc:0 ""
   
   ##WAR PATH##
   SDF_northwind_planning:0 "Planning Operation Northwind"
