icons, portrait, and events

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -3164,21 +3164,21 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_battle_grain:0 "Battle for Grain"
   SDF_battle_grain_desc:0 "“One cannot think well, love well, sleep well, if one has not dined well” - Virginia Woolf \n \n The path to stability requires satisfying our people’s hunger. Grain must be produced, at all costs. "
   SDF_new_mines:0 "Resource Allocation"
-  SDF_new_mines_desc:0 ""
+  SDF_new_mines_desc:0 "The prudent usage of our God-given resources is imperative to a self-sustaining nation. Yet, we must know just how far our nation can go alone, if her resources are stretched thin."
   SDF_kuro_century:0 "Kuromorimine "§YGolden§!" Age"
-  SDF_kuro_century_desc:0 ""
+  SDF_kuro_century_desc:0 "The crisis caused by our overextended natural resources is over. Our period of self-sufficiency shall begin."
   SDF_free_market:0 "The Free Market"
-  SDF_free_market_desc:0 ""
+  SDF_free_market_desc:0 "Let do and let pass. \n \nThe decades of military and authoritarian rule have made Kuromorimine’s economy military-dependent and inefficient. Decoupling from the government’s iron hand and transitioning to one that is invisible shall be the first step to a prosperous public. "
   SDF_civil_works:0 "Civil Work Programs"
   SDF_civil_works_desc:0 "Our people are in need. With analysis by an economist named Keynes, we may have to try a new approach to getting out of this economic crisis. Perhaps programs like those implemented in Roosevelt’s New Deal may help our economy grow."
   SDF_autobauhn:0 "Expand the Autobahn"
   SDF_autobauhn_desc:0 "A growing economy requires the infrastructure to support it. The cleanest solution is to expand our greatest and most modern triumph: the autobahn."
   SDF_fix_buracracy:0 "Reorganize the Bureaucracy"
-  SDF_fix_buracracy_desc:0 ""
+  SDF_fix_buracracy_desc:0 "Our inability to process the information we have and to administer the services the people need are holding back our potential. Rooting out the inefficiencies and corruption shall smooth out the kinks in the system."
   SDF_zero_tarrifs:0 "Open to the West"
   SDF_zero_tarrifs_desc:0 "Jack of all trades, master of none. A closed nation will suffer a fate that cannot be undone.  \n \nA self-sustaining free market must interact with stronger economies. Opening the nation to the cultures and goods abroad will strengthen our own production."
   SDF_into_future:0 "Into the Future"
-  SDF_into_future_desc:0 ""
+  SDF_into_future_desc:0 "The age of old Kuromorimine is gone - the age of a new Kuromorine is here"
   
   ##EASTER EGG##
   SDF_anzai_one:0 "A Old Friend"
