--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2973,6 +2973,16 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   sdf_saori_takebe_idea:0 "Heerfuhrer Saori Takebe"
   sdf_saori_takebe_idea_desc:0 "Even if another wing of the party is in charge, Saori is always at the helm"
   sdf_war_prep:0 "War Preparations"
+  sdf_press_freedom_1:0 "Freedom of the Press"
+  sdf_civil_freedoms:0 "Expanded Civil Freedoms"
+  sdf_secret_police:0 "K.I.B"
+  sdf_secret_police_desc:0 "Kuromormine Intelligence Bureau"
+  sdf_coalition:0 "Grand Coalition"
+  sdf_outright_majority:0 "Majority in Parliament"
+  sdf_volksturm_act:0 "Volkssturm Act"
+  sdf_corperations:0 "Favour with the Corporations"
+  sdf_rhinemetal:0 "Rheinmetall Contracts"
+  sdf_messerschmitt:0 "Messerschmitt Contracts"
   
   ##DECISIONS##
   SDF_raise_units:0 "Raising the National Guard"
@@ -3198,23 +3208,58 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   
   ##WAR PATH##
   SDF_northwind_planning:0 "Planning Operation Northwind"
-  SDF_northwind_planning_desc:0 ""
+  SDF_northwind_planning_desc:0 "The Katyushaist Revolution burns with a fury that engulfs all that resist against it. Striking at its heart in Katyushaist Russia shall protect us from falling into its grasp. We must prepare at once for the invasion of Pravda."
   SDF_war_prep:0 "War Preparations"
-  SDF_war_prep_desc:0 ""
+  SDF_war_prep_desc:0 "Logistics and supplies to the East will be vital to winning this war - construction of factories in East Kuromorimine will be the first step."
   SDF_operation_gleiwitz:0 "Operation Gleiwitz"
   SDF_operation_gleiwitz_desc:0 ""
   SDF_operation_ikarus:0 "Operation Ikarus"
   SDF_sdk_training:0 "Large Scale SDK Military Exercises"
-  SDF_sdk_training_desc:0 ""
+  SDF_sdk_training_desc:0 "The Katyushaists surely must know that the nation is rearming. But exactly how much is difficult to tell. Military exercises will give them something to fear. "
   SDF_saarbrucken_confrence:0 "Saarbrucken Conference"
   SDF_saarbrucken_confrence_desc:0 ""
   SDF_treaty_friendship:0 "Treaty of Friendship"
-  SDF_treaty_friendship_desc:0 ""
+  SDF_treaty_friendship_desc:0 "Previous attempts to fight a two front war have never ended well for Germany. Securing the western border via a nonaggression pact shall allow for a concentrated push to the East."
   SDF_eastern_allies:0 "Eastern "Allies"
   SDF_eastern_allies_desc:0 ""
   SDF_operation_northwind:0 "Operation Northwind"
   SDF_operation_northwind_desc:0 ""
   
+  ##POLITICAL##
+  
+  SDF_political_manouvering:0 "Political Manouvering"
+  SDF_political_manouvering_desc:0 ""
+  SDF_anzai_plan:0 "Anzai Plan"
+  SDF_anzai_plan_desc:0 ""
+  SDF_soup_kitchen:0 "Lower Class Aid"
+  SDF_soup_kitchen_desc:0 ""
+  SDF_conscription:0 "Issue of Conscription"
+  SDF_conscription_desc:0 ""
+  SDF_economic_crisis:0 "Handeled the Economic Crisis"
+  SDF_economic_crisis_desc:0 ""
+  SDF_tamed_military:0 "Tamed the Military"
+  SDF_tamed_military_desc:0 ""
+  SDF_coalition_form:0 "Coalition Formed"
+  SDF_coalition_form_desc:0 ""
+  SDF_outright_majority:0 "Majority in the Lower Parliament"
+  SDF_outright_majority_desc:0 ""
+  SDF_press_freedom:0 "Freedom of the Press"
+  SDF_press_freedom_desc:0 ""
+  SDF_civil_freedoms:0 "Expand Upon Civil Freedoms"
+  SDF_civil_freedoms_desc:0 ""
+  SDF_secret_police:0 "Expand the K.I.B"
+  SDF_secret_police_desc:0 ""
+  SDF_war_effort:0 "War Effort"
+  SDF_war_effort_desc:0 ""
+  SDF_volksturm:0 "B.1099 Volkssturm Act"
+  SDF_volksturm_desc:0 ""
+  SDF_corperations:0 "Winning over the Corperations"
+  SDF_corperations_desc:0 ""
+  SDF_rhinemetal_contracts:0 "Rhienmetall Contracts"
+  SDF_rhinemetal_contracts_desc:0 ""
+  SDF_messerschmitt_contracts:0 "Messerschmitt Contracts"
+  SDF_messerschmitt_contracts_desc:0 ""
+
   
   ##SDF TECH LOC##
   
