--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1242,20 +1242,20 @@
  ETH:0 "Ethiopia"
  ETH_DEF:0 "Ethiopia"
  ETH_ADJ:0 "Ethiopian"
- SLO_fascism:0 "Nationalist loske"
- SLO_fascism_DEF:0 "Nationalist loske"
- SLO_democratic:0 "loske Republic"
- SLO_democratic_DEF:0 "the loske Republic"
- SLO_neutrality:0 "Free State of loske"
- SLO_neutrality_DEF:0 "the Free State of loske"
- SLO_communism:0 "loske Socialist Republic"
- SLO_communism_DEF:0 "the loske Socialist Republic"
+ SLO_fascism:0 "Ooarai"
+ SLO_fascism_DEF:0 "Ooarai"
+ SLO_democratic:0 "Ooarai"
+ SLO_democratic_DEF:0 "Ooarai"
+ SLO_neutrality:0 "Ooarai"
+ SLO_neutrality_DEF:0 "Ooarai"
+ SLO_communism:0 "Ooarai"
+ SLO_communism_DEF:0 "Ooarai"
  SLO_fascism_ADJ:0 "Ooarai"
  SLO_democratic_ADJ:0 "Ooarai"
  SLO_neutrality_ADJ:0 "Ooarai"
  SLO_communism_ADJ:0 "Ooarai"
- SLO:0 "loske"
- SLO_DEF:0 "loske"
+ SLO:0 "Ooarai"
+ SLO_DEF:0 "Ooarai"
  SLO_ADJ:0 "Slovakian"
  BHU_fascism:0 "Thunder Dragon Empire"
  BHU_fascism_DEF:0 "the Thunder Dragon Empire"
